--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "virtual-store",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://danyneyra.github.io/react-tiendamia",
+  "homepage": "http://danyneyra.github.io/react-tiendamia",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d dist",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
